[package]
name = "cairo_sandbox"
version = "0.1.0"
authors = ["jiicer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
png = "0.15.3"
gtk = "*"
gio = "*"
gdk = "*"
glib = "*"

cairo-rs = { version = "0.8.0", features = ["png"] }
